// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the snapshot 1`] = `
Array [
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="form-control form-group"
      id="region-question-div"
    >
      <label
        className="form-group floating-label label"
        htmlFor="region-question-div"
        id="region-question-label"
      >
        Deployed in Regions:
      </label>
      <form
        className="form-inline form-group"
        id="Deployed-in-Regions"
      >
        <div
          className="form-group CRB CRB--checkbox CRB--inline"
          onMouseUp={undefined}
          onTouchEnd={undefined}
        >
          <label
            className="CRB__label text-muted CRB__label--right"
          >
            <input
              checked={true}
              className="CRB__input"
              id="us-west-1"
              name="us-west-1"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="CRB__toggle CRB__toggle--left"
            >
              <span
                className="SVGIcon SVGIcon--16px SVGIcon--inline-flex CRB__svg"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<svg focusable=\\"false\\" data-id=\\"SVG_CHECK__16\\" width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path fill=\\"none\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M14.5 3.3l-8.2 9.4L1.5 8\\"/></svg>",
                  }
                }
              />
            </span>
            <span
              className="label-text"
            >
              us-west-1
            </span>
          </label>
        </div>
        <div
          className="form-group CRB CRB--checkbox CRB--inline"
          onMouseUp={undefined}
          onTouchEnd={undefined}
        >
          <label
            className="CRB__label text-muted CRB__label--right"
          >
            <input
              checked={false}
              className="CRB__input"
              id="us-east-1"
              name="us-east-1"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="CRB__toggle CRB__toggle--left"
            />
            <span
              className="label-text"
            >
              us-east-1
            </span>
          </label>
        </div>
        <div
          className="form-group CRB CRB--checkbox CRB--inline"
          onMouseUp={undefined}
          onTouchEnd={undefined}
        >
          <label
            className="CRB__label text-muted CRB__label--right"
          >
            <input
              checked={false}
              className="CRB__input"
              id="eu-west-1"
              name="eu-west-1"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="CRB__toggle CRB__toggle--left"
            />
            <span
              className="label-text"
            >
              eu-west-1
            </span>
          </label>
        </div>
        <div
          className="form-group CRB CRB--checkbox CRB--inline"
          onMouseUp={undefined}
          onTouchEnd={undefined}
        >
          <label
            className="CRB__label text-muted CRB__label--right"
          >
            <input
              checked={false}
              className="CRB__input"
              id="ap-northeast-1"
              name="ap-northeast-1"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="CRB__toggle CRB__toggle--left"
            />
            <span
              className="label-text"
            >
              ap-northeast-1
            </span>
          </label>
        </div>
        <div
          className="form-group CRB CRB--checkbox CRB--inline"
          onMouseUp={undefined}
          onTouchEnd={undefined}
        >
          <label
            className="CRB__label text-muted CRB__label--right"
          >
            <input
              checked={false}
              className="CRB__input"
              id="ap-southeast-1"
              name="ap-southeast-1"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="CRB__toggle CRB__toggle--left"
            />
            <span
              className="label-text"
            >
              ap-southeast-1
            </span>
          </label>
        </div>
        <div
          className="form-group CRB CRB--checkbox CRB--inline"
          onMouseUp={undefined}
          onTouchEnd={undefined}
        >
          <label
            className="CRB__label text-muted CRB__label--right"
          >
            <input
              checked={false}
              className="CRB__input"
              id="ap-southeast-2"
              name="ap-southeast-2"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="CRB__toggle CRB__toggle--left"
            />
            <span
              className="label-text"
            >
              ap-southeast-2
            </span>
          </label>
        </div>
        <div
          className="form-group CRB CRB--checkbox CRB--inline"
          onMouseUp={undefined}
          onTouchEnd={undefined}
        >
          <label
            className="CRB__label text-muted CRB__label--right"
          >
            <input
              checked={false}
              className="CRB__input"
              id="other"
              name="other"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="CRB__toggle CRB__toggle--left"
            />
            <span
              className="label-text"
            >
              other
            </span>
          </label>
        </div>
      </form>
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="form-group floating-label not-empty"
    >
      <input
        aria-invalid={false}
        aria-label="# Availability Zones Deployed to"
        className="form-control"
        id="#-Availability-Zones-Deployed-to"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="# Availability Zones Deployed to"
        readOnly={undefined}
        type="number"
        value={2}
      />
      <label
        className=""
        htmlFor="#-Availability-Zones-Deployed-to"
      >
        # Availability Zones Deployed to
      </label>
      
      
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="form-group floating-label not-empty"
    >
      <input
        aria-invalid={false}
        aria-label="# Instances Deployed"
        className="form-control"
        id="#-Instances-Deployed"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="# Instances Deployed"
        readOnly={undefined}
        type="number"
        value={5}
      />
      <label
        className=""
        htmlFor="#-Instances-Deployed"
      >
        # Instances Deployed
      </label>
      
      
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="SearchableListBase"
      tabIndex="-1"
    >
      <div
        aria-controls="SearchList"
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="2 items in list, use the up and down keys to navigate"
        aria-owns="SearchList"
        className="SearchListInput"
        role="combobox"
      >
        <input
          aria-hidden="true"
          className="SearchListInput__hint"
          disabled={true}
          tabIndex="-1"
          type="text"
          value=""
        />
        <div
          className="form-group floating-label not-empty"
        >
          <input
            aria-autocomplete="both"
            aria-invalid={false}
            aria-label="Deployed to Segment?"
            autoComplete="off"
            className="form-control"
            id="Deployed-to-Segment?"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            placeholder="Deployed to Segment?"
            readOnly={undefined}
            type="text"
            value="True"
          />
          <label
            className=""
            htmlFor="Deployed-to-Segment?"
          >
            Deployed to Segment?
          </label>
        </div>
        <span
          aria-live="polite"
          className="sr-only"
          role="status"
        >
          True selected
        </span>
      </div>
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="SearchableListBase"
      tabIndex="-1"
    >
      <div
        aria-controls="SearchList"
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="2 items in list, use the up and down keys to navigate"
        aria-owns="SearchList"
        className="SearchListInput"
        role="combobox"
      >
        <input
          aria-hidden="true"
          className="SearchListInput__hint"
          disabled={true}
          tabIndex="-1"
          type="text"
          value=""
        />
        <div
          className="form-group floating-label empty"
        >
          <input
            aria-autocomplete="both"
            aria-invalid={false}
            aria-label="Chaos Monkey Enabled?"
            autoComplete="off"
            className="form-control"
            id="Chaos-Monkey-Enabled?"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            placeholder="Chaos Monkey Enabled?"
            readOnly={undefined}
            type="text"
            value=""
          />
          <label
            className=""
            htmlFor="Chaos-Monkey-Enabled?"
          >
            Chaos Monkey Enabled?
          </label>
        </div>
        <span
          aria-live="polite"
          className="sr-only"
          role="status"
        >
          No items selected
        </span>
      </div>
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="SearchableListBase"
      tabIndex="-1"
    >
      <div
        aria-controls="SearchList"
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="6 items in list, use the up and down keys to navigate"
        aria-owns="SearchList"
        className="SearchListInput"
        role="combobox"
      >
        <input
          aria-hidden="true"
          className="SearchListInput__hint"
          disabled={true}
          tabIndex="-1"
          type="text"
          value=""
        />
        <div
          className="form-group floating-label not-empty"
        >
          <input
            aria-autocomplete="both"
            aria-invalid={false}
            aria-label="Auto-Scaling Verified By"
            autoComplete="off"
            className="form-control"
            id="Auto-Scaling-Verified-By"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            placeholder="Auto-Scaling Verified By"
            readOnly={undefined}
            type="text"
            value="Production Observation"
          />
          <label
            className=""
            htmlFor="Auto-Scaling-Verified-By"
          >
            Auto-Scaling Verified By
          </label>
        </div>
        <span
          aria-live="polite"
          className="sr-only"
          role="status"
        >
          Production Observation selected
        </span>
      </div>
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="form-group floating-label empty"
    >
      <textarea
        aria-label="Single Points of Failure"
        className="FormTextArea__textarea form-control FormTextArea__textarea--auto-expand"
        id="Single-Points-of-Failure"
        name="Single-Points-of-Failure"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Single Points of Failure"
        value=""
      />
      <label
        className="FormTextArea__floating-label"
        htmlFor="Single-Points-of-Failure"
      >
        Single Points of Failure
      </label>
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="date-picker"
    >
      <div
        className=""
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        role="presentation"
        style={
          Object {
            "display": "block",
            "outline": 0,
            "position": "relative",
          }
        }
        tabIndex={null}
      >
        <div
          className="position-relative"
        >
          <div
            className="date-picker__input form-group floating-label not-empty"
          >
            <input
              aria-invalid={false}
              aria-label="Check in date expanded. Choose a date from the table below. Tab into the table and use the arrow keys for navigation."
              className="form-control"
              data-wdio="date-picker-input"
              id="input-Multi-Region-ETA"
              name="Multi-Region ETA"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={undefined}
              placeholder="Multi-Region ETA"
              readOnly="readOnly"
              type="text"
              value="2/29/2020"
            />
            <label
              className=""
              htmlFor="input-Multi-Region-ETA"
            >
              Multi-Region ETA
            </label>
          </div>
          <div
            className="picker__overlay picker__overlay--selectable"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="date-picker"
    >
      <div
        className=""
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        role="presentation"
        style={
          Object {
            "display": "block",
            "outline": 0,
            "position": "relative",
          }
        }
        tabIndex={null}
      >
        <div
          className="position-relative"
        >
          <div
            className="date-picker__input form-group floating-label not-empty"
          >
            <input
              aria-invalid={false}
              aria-label="Check in date expanded. Choose a date from the table below. Tab into the table and use the arrow keys for navigation."
              className="form-control"
              data-wdio="date-picker-input"
              id="input-Resilient-ETA"
              name="Resilient ETA"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={undefined}
              placeholder="Resilient ETA"
              readOnly="readOnly"
              type="text"
              value="3/11/2020"
            />
            <label
              className=""
              htmlFor="input-Resilient-ETA"
            >
              Resilient ETA
            </label>
          </div>
          <div
            className="picker__overlay picker__overlay--selectable"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="date-picker"
    >
      <div
        className=""
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        role="presentation"
        style={
          Object {
            "display": "block",
            "outline": 0,
            "position": "relative",
          }
        }
        tabIndex={null}
      >
        <div
          className="position-relative"
        >
          <div
            className="date-picker__input form-group floating-label not-empty"
          >
            <input
              aria-invalid={false}
              aria-label="Check in date expanded. Choose a date from the table below. Tab into the table and use the arrow keys for navigation."
              className="form-control"
              data-wdio="date-picker-input"
              id="input-Last-Rollback-Date"
              name="Last-Rollback-Date"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={undefined}
              placeholder="Last-Rollback-Date"
              readOnly="readOnly"
              type="text"
              value="4/11/2020"
            />
            <label
              className=""
              htmlFor="input-Last-Rollback-Date"
            >
              Last-Rollback-Date
            </label>
          </div>
          <div
            className="picker__overlay picker__overlay--selectable"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`matches the snapshot 2`] = `
Array [
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="form-control form-group"
      id="region-question-div"
    >
      <label
        className="form-group floating-label label"
        htmlFor="region-question-div"
        id="region-question-label"
      >
        Deployed in Regions:
      </label>
      <form
        className="form-inline form-group"
        id="Deployed-in-Regions"
      >
        <div
          className="form-group CRB CRB--checkbox CRB--inline"
          onMouseUp={undefined}
          onTouchEnd={undefined}
        >
          <label
            className="CRB__label text-muted CRB__label--right"
          >
            <input
              checked={true}
              className="CRB__input"
              id="us-west-1"
              name="us-west-1"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="CRB__toggle CRB__toggle--left"
            >
              <span
                className="SVGIcon SVGIcon--16px SVGIcon--inline-flex CRB__svg"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<svg focusable=\\"false\\" data-id=\\"SVG_CHECK__16\\" width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path fill=\\"none\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" d=\\"M14.5 3.3l-8.2 9.4L1.5 8\\"/></svg>",
                  }
                }
              />
            </span>
            <span
              className="label-text"
            >
              us-west-1
            </span>
          </label>
        </div>
        <div
          className="form-group CRB CRB--checkbox CRB--inline"
          onMouseUp={undefined}
          onTouchEnd={undefined}
        >
          <label
            className="CRB__label text-muted CRB__label--right"
          >
            <input
              checked={false}
              className="CRB__input"
              id="us-east-1"
              name="us-east-1"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="CRB__toggle CRB__toggle--left"
            />
            <span
              className="label-text"
            >
              us-east-1
            </span>
          </label>
        </div>
        <div
          className="form-group CRB CRB--checkbox CRB--inline"
          onMouseUp={undefined}
          onTouchEnd={undefined}
        >
          <label
            className="CRB__label text-muted CRB__label--right"
          >
            <input
              checked={false}
              className="CRB__input"
              id="eu-west-1"
              name="eu-west-1"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="CRB__toggle CRB__toggle--left"
            />
            <span
              className="label-text"
            >
              eu-west-1
            </span>
          </label>
        </div>
        <div
          className="form-group CRB CRB--checkbox CRB--inline"
          onMouseUp={undefined}
          onTouchEnd={undefined}
        >
          <label
            className="CRB__label text-muted CRB__label--right"
          >
            <input
              checked={false}
              className="CRB__input"
              id="ap-northeast-1"
              name="ap-northeast-1"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="CRB__toggle CRB__toggle--left"
            />
            <span
              className="label-text"
            >
              ap-northeast-1
            </span>
          </label>
        </div>
        <div
          className="form-group CRB CRB--checkbox CRB--inline"
          onMouseUp={undefined}
          onTouchEnd={undefined}
        >
          <label
            className="CRB__label text-muted CRB__label--right"
          >
            <input
              checked={false}
              className="CRB__input"
              id="ap-southeast-1"
              name="ap-southeast-1"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="CRB__toggle CRB__toggle--left"
            />
            <span
              className="label-text"
            >
              ap-southeast-1
            </span>
          </label>
        </div>
        <div
          className="form-group CRB CRB--checkbox CRB--inline"
          onMouseUp={undefined}
          onTouchEnd={undefined}
        >
          <label
            className="CRB__label text-muted CRB__label--right"
          >
            <input
              checked={false}
              className="CRB__input"
              id="ap-southeast-2"
              name="ap-southeast-2"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="CRB__toggle CRB__toggle--left"
            />
            <span
              className="label-text"
            >
              ap-southeast-2
            </span>
          </label>
        </div>
        <div
          className="form-group CRB CRB--checkbox CRB--inline"
          onMouseUp={undefined}
          onTouchEnd={undefined}
        >
          <label
            className="CRB__label text-muted CRB__label--right"
          >
            <input
              checked={false}
              className="CRB__input"
              id="other"
              name="other"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="CRB__toggle CRB__toggle--left"
            />
            <span
              className="label-text"
            >
              other
            </span>
          </label>
        </div>
      </form>
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="form-group floating-label empty"
    >
      <input
        aria-invalid={false}
        aria-label="# Availability Zones Deployed to"
        className="form-control"
        id="#-Availability-Zones-Deployed-to"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="# Availability Zones Deployed to"
        readOnly={undefined}
        type="number"
        value=""
      />
      <label
        className=""
        htmlFor="#-Availability-Zones-Deployed-to"
      >
        # Availability Zones Deployed to
      </label>
      
      
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="form-group floating-label empty"
    >
      <input
        aria-invalid={false}
        aria-label="# Instances Deployed"
        className="form-control"
        id="#-Instances-Deployed"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="# Instances Deployed"
        readOnly={undefined}
        type="number"
        value=""
      />
      <label
        className=""
        htmlFor="#-Instances-Deployed"
      >
        # Instances Deployed
      </label>
      
      
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="SearchableListBase"
      tabIndex="-1"
    >
      <div
        aria-controls="SearchList"
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="2 items in list, use the up and down keys to navigate"
        aria-owns="SearchList"
        className="SearchListInput"
        role="combobox"
      >
        <input
          aria-hidden="true"
          className="SearchListInput__hint"
          disabled={true}
          tabIndex="-1"
          type="text"
          value=""
        />
        <div
          className="form-group floating-label empty"
        >
          <input
            aria-autocomplete="both"
            aria-invalid={false}
            aria-label="Deployed to Segment?"
            autoComplete="off"
            className="form-control"
            id="Deployed-to-Segment?"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            placeholder="Deployed to Segment?"
            readOnly={undefined}
            type="text"
            value=""
          />
          <label
            className=""
            htmlFor="Deployed-to-Segment?"
          >
            Deployed to Segment?
          </label>
        </div>
        <span
          aria-live="polite"
          className="sr-only"
          role="status"
        >
          No items selected
        </span>
      </div>
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="SearchableListBase"
      tabIndex="-1"
    >
      <div
        aria-controls="SearchList"
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="2 items in list, use the up and down keys to navigate"
        aria-owns="SearchList"
        className="SearchListInput"
        role="combobox"
      >
        <input
          aria-hidden="true"
          className="SearchListInput__hint"
          disabled={true}
          tabIndex="-1"
          type="text"
          value=""
        />
        <div
          className="form-group floating-label empty"
        >
          <input
            aria-autocomplete="both"
            aria-invalid={false}
            aria-label="Chaos Monkey Enabled?"
            autoComplete="off"
            className="form-control"
            id="Chaos-Monkey-Enabled?"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            placeholder="Chaos Monkey Enabled?"
            readOnly={undefined}
            type="text"
            value=""
          />
          <label
            className=""
            htmlFor="Chaos-Monkey-Enabled?"
          >
            Chaos Monkey Enabled?
          </label>
        </div>
        <span
          aria-live="polite"
          className="sr-only"
          role="status"
        >
          No items selected
        </span>
      </div>
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="SearchableListBase"
      tabIndex="-1"
    >
      <div
        aria-controls="SearchList"
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="6 items in list, use the up and down keys to navigate"
        aria-owns="SearchList"
        className="SearchListInput"
        role="combobox"
      >
        <input
          aria-hidden="true"
          className="SearchListInput__hint"
          disabled={true}
          tabIndex="-1"
          type="text"
          value=""
        />
        <div
          className="form-group floating-label empty"
        >
          <input
            aria-autocomplete="both"
            aria-invalid={false}
            aria-label="Auto-Scaling Verified By"
            autoComplete="off"
            className="form-control"
            id="Auto-Scaling-Verified-By"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            placeholder="Auto-Scaling Verified By"
            readOnly={undefined}
            type="text"
            value=""
          />
          <label
            className=""
            htmlFor="Auto-Scaling-Verified-By"
          >
            Auto-Scaling Verified By
          </label>
        </div>
        <span
          aria-live="polite"
          className="sr-only"
          role="status"
        >
          No items selected
        </span>
      </div>
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="form-group floating-label empty"
    >
      <textarea
        aria-label="Single Points of Failure"
        className="FormTextArea__textarea form-control FormTextArea__textarea--auto-expand"
        id="Single-Points-of-Failure"
        name="Single-Points-of-Failure"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Single Points of Failure"
        value=""
      />
      <label
        className="FormTextArea__floating-label"
        htmlFor="Single-Points-of-Failure"
      >
        Single Points of Failure
      </label>
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="date-picker"
    >
      <div
        className=""
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        role="presentation"
        style={
          Object {
            "display": "block",
            "outline": 0,
            "position": "relative",
          }
        }
        tabIndex={null}
      >
        <div
          className="position-relative"
        >
          <div
            className="date-picker__input form-group floating-label empty"
          >
            <input
              aria-invalid={false}
              aria-label="Check in date expanded. Choose a date from the table below. Tab into the table and use the arrow keys for navigation."
              className="form-control"
              data-wdio="date-picker-input"
              id="input-Multi-Region-ETA"
              name="Multi-Region ETA"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={undefined}
              placeholder="Multi-Region ETA"
              readOnly="readOnly"
              type="text"
              value=""
            />
            <label
              className=""
              htmlFor="input-Multi-Region-ETA"
            >
              Multi-Region ETA
            </label>
          </div>
          <div
            className="picker__overlay picker__overlay--selectable"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="date-picker"
    >
      <div
        className=""
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        role="presentation"
        style={
          Object {
            "display": "block",
            "outline": 0,
            "position": "relative",
          }
        }
        tabIndex={null}
      >
        <div
          className="position-relative"
        >
          <div
            className="date-picker__input form-group floating-label empty"
          >
            <input
              aria-invalid={false}
              aria-label="Check in date expanded. Choose a date from the table below. Tab into the table and use the arrow keys for navigation."
              className="form-control"
              data-wdio="date-picker-input"
              id="input-Resilient-ETA"
              name="Resilient ETA"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={undefined}
              placeholder="Resilient ETA"
              readOnly="readOnly"
              type="text"
              value=""
            />
            <label
              className=""
              htmlFor="input-Resilient-ETA"
            >
              Resilient ETA
            </label>
          </div>
          <div
            className="picker__overlay picker__overlay--selectable"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    role="button"
    style={
      Object {
        "display": "block",
        "outline": 0,
        "position": "relative",
      }
    }
    tabIndex="0"
  >
    <div
      className="date-picker"
    >
      <div
        className=""
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        role="presentation"
        style={
          Object {
            "display": "block",
            "outline": 0,
            "position": "relative",
          }
        }
        tabIndex={null}
      >
        <div
          className="position-relative"
        >
          <div
            className="date-picker__input form-group floating-label empty"
          >
            <input
              aria-invalid={false}
              aria-label="Check in date expanded. Choose a date from the table below. Tab into the table and use the arrow keys for navigation."
              className="form-control"
              data-wdio="date-picker-input"
              id="input-Last-Rollback-Date"
              name="Last-Rollback-Date"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={undefined}
              placeholder="Last-Rollback-Date"
              readOnly="readOnly"
              type="text"
              value=""
            />
            <label
              className=""
              htmlFor="input-Last-Rollback-Date"
            >
              Last-Rollback-Date
            </label>
          </div>
          <div
            className="picker__overlay picker__overlay--selectable"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
  </div>,
]
`;
